tests/error/protect_type_err.gw
#! [contains] can't use protected type
class C {
  class protect D {
  }
}

var C.D d;
